--- a/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj
+++ b/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="MD_Tree.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Graph.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
