--- a/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
+++ b/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
@@ -39,4 +39,7 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Graph.txt" />
+  </ItemGroup>
 </Project>
