--- a/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
+++ b/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Util.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="TreeList.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graph.h">
@@ -38,8 +41,12 @@
     <ClInclude Include="Util.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="TreeList.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Graph.txt" />
+    <Text Include="Changes.txt" />
   </ItemGroup>
 </Project>
