Some unfinished changes

--- a/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
+++ b/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj.filters
@@ -48,5 +48,6 @@
   <ItemGroup>
     <Text Include="Graph.txt" />
     <Text Include="Changes.txt" />
+    <Text Include="OldCode.txt" />
   </ItemGroup>
 </Project>
