--- a/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj
+++ b/ModularDecomposition_v3/ModularDecomposition_v3.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <Text Include="Changes.txt" />
     <Text Include="Graph.txt" />
+    <Text Include="OldCode.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
